# python-project-49

./: .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: codeclimate.yml
brain_games/: cli.py  common.py  tools.py
brain_games/db/: brain_calc.json  brain_even.json  brain_gcd.json  brain_prime.json  brain_progression.json
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/games/brain_calc/: __init__.py  brain_calc.py
brain_games/games/brain_even/: __init__.py  brain_even.py
brain_games/games/brain_gcd/: __init__.py  brain_gcd.py
brain_games/games/brain_prime/: __init__.py  brain_prime.py
brain_games/games/brain_progression/: __init__.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
tests/: test_brain_games.py
