[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "brain-games"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "brain_games" }]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
repository = "https://github.com/vtcaregorodtcev/python-project-49"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.games.brain_even.brain_even:main"
brain-calc = "brain_games.games.brain_calc.brain_calc:main"
brain-gcd = "brain_games.games.brain_gcd.brain_gcd:main"
brain-progression = "brain_games.games.brain_progression.brain_progression:main"
brain-prime = "brain_games.games.brain_prime.brain_prime:main"